[build-system]
requires = ["setuptools>=61.2", "jpy"]
build-backend = "setuptools.build_meta"

[project]
name = "drools_jpy"
version = "0.2.8"
authors = [
  { name="Madhu Kanoor", email="author@example.com" },
]
description = "A Python package to directly call Drools Java classes from python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
"jpy",
]

[project.optional-dependencies]
local = [
  'flake8',
  'black',
  'isort',
  'tox',
  'pyyaml',
]
tests = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-asyncio',
  'pytest-cov',
  'tox',
]

dev = [
  "drools_jpy[local]",
  "drools_jpy[tests]",
]

[project.urls]
"Homepage" = "https://github.com/mkanoor/drools_jpy"
"Bug Tracker" = "https://github.com/mkanoor/drools_jpy/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
drools_jpy = ["*.jar"]



[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py39,py310,py311

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
passenv = JAVA_HOME
deps = pytest               # PYPI package providing pytest,
       jpy
       tox-wheel
       pyyaml
       pytest-asyncio
commands = pytest {posargs} # substitute with tox' positional arguments
wheels = true
"""

[tool.flake8]
max-line-length = 79
count = true
exclude = [
      '.tox',
      'docs',
      'venv',
      '.venv',
]


[tool.black]
line-length = 79

[tool.isort]
profile = 'black'
